Fixed layout bug, fixes repeatable ans bugs adds register text to login [Finishes #85900846] [Finishes #88731098] [Finishes #88731322]

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -15,7 +15,6 @@ html {
 
 body {
     width: 100%;
-    height: 100%;
     overflow-x: hidden;
     margin: 0px auto;
     font-size: 18px;
@@ -26,7 +25,6 @@ body {
 .wrapper {
     box-sizing: border-box;
     width: 100%;
-    height: 100%;
     overflow-x: hidden;
     -webkit-tap-highlight-color: transparent;
     background: rgba(255, 248, 243, 0.5);
@@ -470,7 +468,7 @@ ul {
     padding: 10px 15px;
     border: 2px solid rgba(0,0,0,0.3);
     width: 100%;
-    height: 48px;
+    min-height: 48px;
     overflow-y: auto;
     overflow-x: hidden;
     font-size: 20px;
